Added option to define repository url with a config instead of program argument.